--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,36 @@
-# Spring Boot
+#################################
+########## Spring Boot ##########
+#################################
+server/HELP.md
+server/.gradle
+server/build/
+!server/gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+server/out/
+server/bin/
+server/.settings/
+server/.classpath
+server/.project
+server/*.class
+server/*.jar
+server/*.war
+
+server/src/main/resources/application-*.properties
+!server/src/main/resources/application.properties
 
 
-# Nuxt.js
+#################################
+############ Nuxt.js ############
+#################################
 web/node_modules/
 web/.nuxt/
 web/dist/
 
 
-# IDEs and editors
+#################################
+######## IDEs and editors #######
+#################################
 .idea/
 .vscode/
 *.iws
@@ -15,5 +38,7 @@ web/dist/
 *.ipr
 
 
-# OS generated files
+#################################
+###### OS generated files #######
+#################################
 .DS_Store
