--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ server/src/main/resources/application-*.properties
 
 
 #################################
+############ OpenAPI ############
+#################################
+!api-docs/openapi.yaml
+
+
+#################################
 ############ Nuxt.js ############
 #################################
 web/node_modules/
