--- a/.gitignore
+++ b/.gitignore
@@ -15,16 +15,17 @@ server/.project
 server/*.class
 server/*.jar
 server/*.war
+server/*.log
 
 server/src/main/resources/application-*.properties
 !server/src/main/resources/application.properties
 
+server/.restart
 
 #################################
 ############ OpenAPI ############
 #################################
 !api-docs/openapi.yaml
-
 
 #################################
 ############ Nuxt.js ############
@@ -36,6 +37,10 @@ web/.cache
 web/.output
 web/.data
 web/.nitro
+
+# Nuxt generate
+web/dist/
+web/generate/
 
 # Local env files
 .env
@@ -50,9 +55,35 @@ web/.nitro
 *.iws
 *.iml
 *.ipr
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 #################################
 ###### OS generated files #######
 #################################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+#################################
+########### Logs ################
+#################################
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#################################
+########### Others ##############
+#################################
+*.bak
+*.tmp
+*.temp
