--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=corca-ads-demo-server
+spring.web.resources.add-mappings=false
 
 # API Documentation
 springdoc.api-docs.path=/api-docs
@@ -9,5 +10,4 @@ springdoc.api-docs.enabled=true
 server.port=8080
 
 # Corca Ads API
-corca.ads.api.key=your_api_key_here
 corca.ads.api.client.id=your_client_id_here
