--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@peculiar/webcrypto": "^1.5.0",
     "@vueuse/core": "11.1.0",
+    "nanoid": "^5.0.7",
     "nuxt": "3.13.0",
     "vue": "latest",
     "vue-router": "latest"
