--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,4 +10,4 @@ springdoc.api-docs.enabled=true
 server.port=8080
 
 # Corca Ads API
-corca.ads.api.client.id=your_client_id_here
+corca.ads.api.client.id=7bbb703e-a30b-4a4a-91b4-c0a7d2303415
