feat: connect backend api (#15)
* wip

* wip'

* wip'

* wip

* feat: wip
:

* fix: style

* chore

* chore: remove unused package

* chore: remove unused file

* chore: remove unused file

* chore: set engine and package manager

* docs: API 설명 링크 추가

---------

Co-authored-by: dev-redo <mis05041@naver.com>

--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,11 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
+    "yarn": "1.22.22"
+  },
+  "packageManager": "yarn@1.22.22",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,6 +17,7 @@
   },
   "dependencies": {
     "@vueuse/core": "11.1.0",
+    "nanoid": "^5.0.7",
     "nuxt": "3.13.0",
     "vue": "latest",
     "vue-router": "latest"
