feat: integration corca data api for manage products

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,3 +11,7 @@ server.port=8080
 
 # Corca Ads API
 corca.ads.api.client.id=7bbb703e-a30b-4a4a-91b4-c0a7d2303415
+
+# Corca Data API
+corca.data.api.key.id=your-corca-data-api-key-id
+corca.data.api.key.secret=your-corca-data-api-key-secret
